enum CMD_G2G {
	ToGameConnect 	 = 0x00000001;
	ToGameDisconnect = 0x00000002;
	ToGateLeave      = 0x00000003;
}

message G2G_ToGameConnect {
	required string UserName = 1;
	
	optional string IPAddress = 3;
	optional int32 Port         = 4;
	optional string MAC       = 5;
}

message G2G_ToGameDisconnect {
	optional string Reason = 1;
}

message G2G_ToGateLeave {
	required LeaveReason Reason = 1;
}

enum LeaveReason{
	Normal = 0;
	Fatal = 1;
	Cheat = 2;
	Displace = 3;
	KickOff = 4;
}
